Створення сайту BigSports

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="VitaliySkochko" />
+    <meta name="description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. 
+    Всі новини на українській мові." />
+    <meta name="keywords" content="український футбол, світовий футбол, біатлон, бокс, теніс, новини, спорт" />
+    <meta name="language" content="uk" />
+    <meta name="robots" content="index, follow" />
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>UkrainianFootball</title>
+    <title>BigSPORTS</title>
   </head>
   <body>
     <div id="root"></div>
