Обновление: изменения в manifest.json и иконках

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
     <meta name="language" content="uk" />
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Web site created using create-react-app"/>
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="BigSPORTS" />
+    <meta property="og:description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. Всі новини на українській мові." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:url" content="https://bigsports-a911c.web.app" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BigSPORTS" />
+    <meta name="twitter:description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. Всі новини на українській мові." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>BigSPORTS</title>
