Добавив метатег для пошуку в google

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="VitaliySkochko" />
     <meta name="description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. 
+    <meta name="google-site-verification" content="qKURm2UR3AqSiwZRx-yF1vRcqRZ5j7shbjQjJz_5Xcs" />
     Всі новини на українській мові." />
     <meta name="keywords" content="український футбол, світовий футбол, біатлон, бокс, теніс, новини, спорт" />
     <meta name="language" content="uk" />
