--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="VitaliySkochko" />
-    <meta name="description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. 
-    Всі новини на українській мові." />
-    <meta name="keywords" content="український футбол, світовий футбол, біатлон, бокс, теніс, новини, спорт" />
+    <meta name="description" content="Сайт з новинами про український та світовий спорт. Всі новини на українській мові." />
+    <meta name="keywords" content="український футбол, світовий футбол, європейський футбол, біатлон, бокс, теніс, футзал, новини, спорт" />
     <meta name="language" content="uk" />
+    <link rel="manifest" href="/manifest.json">
     <meta name="robots" content="index, follow" />
     <!-- Open Graph Tags -->
     <meta property="og:title" content="BigSPORTS" />
-    <meta property="og:description" content="Сайт з новинами про український футбол, світовий футбол, біатлон, бокс, теніс. Всі новини на українській мові." />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:description" content="Сайт з новинами про український футбол, європейський футбол, біатлон, бокс, теніс, футзал. Всі новини на українській мові." />
+    <meta property="og:image" content="/logo.png" />
     <meta property="og:url" content="https://bigsports-a911c.web.app" />
     <meta property="og:type" content="website" />
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="BigSPORTS" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="twitter:image" content="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <title>BigSPORTS</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
