BigSports version 2.1. Додана пагінація сторінок до всіх section. Виправлена проблема з іконкою у маніфесті

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="український футбол, світовий футбол, європейський футбол, біатлон, бокс, теніс, футзал, новини, спорт" />
     <meta name="language" content="uk" />
     <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/logo-w.jpg" type="image/jpg">
     <meta name="robots" content="index, follow" />
     <!-- Open Graph Tags -->
     <meta property="og:title" content="BigSPORTS" />
