--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="VitaliySkochko" />
+    <meta name="author" content="Vitaliy Skochko" />
     <meta name="description" content="Сайт з новинами про український та світовий спорт: футбол, біатлон, бокс, теніс, футзал та інші види спорту. Читайте найсвіжіші спортивні новини українською мовою." />
     <meta name="keywords" content="український футбол, УПЛ, Збірна України, Перша Ліга, Друга Ліга, Шахтар, Динамо Київ, світовий футбол, англійська прем'єр-ліга, ла ліга, серія а, єврокубки, ліга чемпіонів, біатлон, бокс, теніс, MMA, футзал, чемпіонат світу з футзалу, клубний чемпіонат світу, спортивні новини, BigSport, новини спорту, спорт в Україні, футбол в Європі, спортивна аналітика" />
     <meta name="language" content="uk" />
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="BigSPORT" />
     <meta name="twitter:image" content="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
-    <title>BigSPORTS</title>
+    <title>BigSPORT</title>
   </head>
   <body>
     <div id="root"></div>
